<resources>
    <string name="app_name">Homework #22</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sandro">sandro</string>
    <string name="write_comment">write comment</string>
    <string name="comments">comments</string>
    <string name="likes">likes</string>
    <string name="share">share</string>
    <string name="favourites">favourites</string>
    <string name="home">home</string>
    <string name="bell">bell</string>
    <string name="channel_id">channel</string>
    <string name="channel_description">Cool channel</string>
    <string name="blabla">blabla</string>
    <string name="kaxetshi_vart_zgvaze">kaxetshi vart zgvaze</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="when_you_wake_up">When you wake up</string>
</resources>