<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.screen.post_detail_fragment.PostDetailFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/spf"
        android:text="@string/sandro"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/spf"
        android:text="@string/sandro"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/spf"
        android:text="@string/blabla"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/spf"
        android:maxLines="5"
        android:text="@string/kaxetshi_vart_zgvaze"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/firstImage"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:circularflow_radiusInDP="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/secondImage"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/firstImage"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/thirdImage"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/firstImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/secondImage"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <View
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/firstImage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/commentIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintEnd_toStartOf="@+id/commentCount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/commentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf"
        android:text="@string/comments"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/commentIcon"
        app:layout_constraintEnd_toStartOf="@+id/likeIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/commentIcon"
        app:layout_constraintTop_toTopOf="@+id/commentIcon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/likeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="@+id/commentCount"
        app:layout_constraintEnd_toStartOf="@+id/likeCount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/commentCount"
        app:layout_constraintTop_toTopOf="@+id/commentCount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf"
        android:text="@string/likes"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/likeIcon"
        app:layout_constraintEnd_toStartOf="@+id/shareIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/likeIcon"
        app:layout_constraintTop_toTopOf="@+id/likeIcon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/shareIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/likeCount"
        app:layout_constraintEnd_toStartOf="@+id/shareText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/likeCount"
        app:layout_constraintTop_toTopOf="@+id/likeCount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf"
        android:text="@string/share"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/shareIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shareIcon"
        app:layout_constraintTop_toTopOf="@+id/shareIcon" />

    <View
        android:id="@+id/secondLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/writeComent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userAvatar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/writeComent"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_comment"
        android:drawableEnd="@drawable/ic_scrapper"
        android:fontFamily="@font/spf"
        android:hint="@string/write_comment"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/userAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userAvatar"
        app:layout_constraintTop_toTopOf="@+id/userAvatar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/progess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>